@stratusjs/angularjs-extras/components/citation fix citation popup location on mobile

--- a/packages/angularjs-extras/src/components/citation.scss
+++ b/packages/angularjs-extras/src/components/citation.scss
@@ -63,5 +63,13 @@ stratus-citation {
       opacity: 1;
       z-index: 9;
     }
+    @media (max-width: 767px) {
+      position: fixed;
+      left: 10%;
+      right: 10%;
+      bottom: 50%;
+      width: 80%;
+      transform: translateY(50%);
+    }
   }
 }
